Padding added for tab names to avoid truncation of names

--- a/reference-visualization-app/dashboard/src/assets/styles/_common.scss
+++ b/reference-visualization-app/dashboard/src/assets/styles/_common.scss
@@ -123,3 +123,7 @@ body {
         }
     }
 }
+
+.mat-tab-label .mat-tab-label-content {
+    padding: 0 0.3em;
+}
